--- a/style.css
+++ b/style.css
@@ -20,3 +20,16 @@ h1 {
 	font-weight: 700;
 	color: black;
 }
+
+p {
+	font-family: 'Montserrat', sans-serif;
+}
+
+a {
+	color: rgb(218,175,0);
+	transition: 250ms;
+}
+
+a:hover {
+	color: rgb(255,175,0);
+}
